[tool.poetry]
name = "kurama"
version = "0.1.0"
description = ""
authors = ["alec <fkalec@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.6"
pymongo = "^4.3.3"
guardrails-ai = "^0.1.6"
pandas = "^2.0.1"
python-dotenv = "^1.0.0"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
